# skydel-rrv-plugin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: formatter.yml
docs/: Doxyfile  README.md  entities.md  how_the_plugin_works.md  introduction.md
docs/entities/: observer.md  receiver.md  simulator.md
source/: CMakeLists.txt
source/receiver_logic/: CMakeLists.txt  NMEAparser.h  nmea_parser.h  proprietary_parser.h  receiver.cpp  receiver.h  serial_receiver.cpp  serial_receiver.h  ubx_base_parser.h  ubx_m8_parser.h
source/rrv_plugin/: CMakeLists.txt  position_logger.cpp  position_logger.h  rrv_configuration.h  rrv_plugin.cpp  rrv_plugin.h  rrv_plugin.json  rrv_viewer.cpp  rrv_viewer.h  rrv_viewer.ui
